Revision history for Geo::Coder::Abbreviations

0.06
	Use JSON::MaybeXS instead of JSON

0.05	Fri Jul 22 10:05:38 EDT 2022
	Use LWP::Simple::WithCache instead of LWP::Simple
	Better die message when the file can't be downloaded
	Use local copy if the abbreviations file can't be downloaded
	Use a fork of the abbreviations as the original is giving 404 errors at the moment

0.04	Sun Oct  4 20:41:12 EDT 2020
	Fix skipped count when not testing on the Internet
	
0.03	Sun Oct  4 11:52:30 EDT 2020
	Use HTTP::Cache::Transparent if that has been installed
	Handle more abbreviations and when given an abbreviated argument

0.02	Thu Oct  1 14:16:59 EDT 2020
	Use less memory
	Don't load the abbreviations table each time a new object is instatiated
	Added LWP::Protocol::https as a PREREQ - RT#133445

0.01	Mon Sep 28 12:58:05 EDT 2020
        First draft