@@ -4,16 +4,31 @@ use ExtUtils::MakeMaker 6.64;	# 6.64 for TEST_REQUIRES
 use Getopt::Long;	# Technique inspired by IO::Lambda
 use IO::Socket::INET;
 
-if(online_tests()) {
-	open(my $enabled, '>', 't/online.enabled') || die "Can't create t/online.enabled $!";
-	close($enabled) || die "Can't create t/online.enabled $!";
+my $online_tests;
+
+if($ENV{'AUTHOR_TESTING'}) {
+	$online_tests = online_tests();
+} else {
+	Getopt::Long::GetOptions('online-tests!' => \$online_tests);
+
+	if(!defined($online_tests)) {
+		$online_tests = online_tests();
+	}
+	if(!$online_tests) {
+		print "On-line tests have been disabled\n";
+	}
+}
+
+if($online_tests) {
+	open(my $enabled, '>', 't/online.enabled') || die "Can't touch t/online.enabled $!";
+	close($enabled) || die "Can't touch t/online.enabled $!";
 } else {
 	unlink('t/online.enabled');
 }
 
 WriteMakefile(
-	NAME		 => 'Geo::Coder::Abbreviations',
-	AUTHOR => q{Nigel Horne <njh@bandsman.co.uk>},
+	NAME	=> 'Geo::Coder::Abbreviations',
+	AUTHOR	=> q{Nigel Horne <njh@bandsman.co.uk>},
 	VERSION_FROM => 'lib/Geo/Coder/Abbreviations.pm',
 	ABSTRACT_FROM => 'lib/Geo/Coder/Abbreviations.pm',
 	((defined($ExtUtils::MakeMaker::VERSION) &&
@@ -54,14 +69,16 @@ WriteMakefile(
 
 sub online_tests
 {
-	return 0 if($ENV{'NO_NETWORK_TESTING'});
+	return 0 if($ENV{'NO_NETWORK_TESTING'} || $ENV{'TRAVIS_PERL_VERSION'});
+	return 0 if($ENV{'AUTOMATED_TESTING'});
 	return 0 if(!-t STDIN);
+
 	my $s = IO::Socket::INET->new(
 		PeerAddr => 'raw.githubusercontent.com:443',
 		Timeout => 5
 	);
 	if($s) {
-		if($ENV{'PERL_MM_USE_DEFAULT'} || $ENV{'AUTOMATED_TESTING'}) {
+		if($ENV{'PERL_MM_USE_DEFAULT'}) {
 			close($s);
 			return 1;
 		}
