@@ -2,6 +2,7 @@ Revision history for Geo::Coder::Abbreviations
 
 0.06
 	Use JSON::MaybeXS instead of JSON
+	Fix code for online/offline testing
 
 0.05	Fri Jul 22 10:05:38 EDT 2022
 	Use LWP::Simple::WithCache instead of LWP::Simple
